swagger choose files
